# ETS

./: README.md
formal-verification/: README.md
formal-verification/Privacy/: Anonymity_User1.out  Anonymity_User1.pv  Anonymity_User2.out  Anonymity_User2.pv
formal-verification/Trace_Properties/: Double_Refund.out  Double_Refund.pv  Double_Transfer.out  Double_Transfer.pv  Double_Validate.out  Double_Validate.pv
formal-verification/Trace_Properties/Authentication/: Authentication_User_And_D.out  Authentication_User_And_D.pv  Authentication_User_And_T.out  Authentication_User_And_T.pv  Authentication_User_And_V.out  Authentication_User_And_V.pv  Authentication_Users_And_T.out  Authentication_Users_And_T.pv
formal-verification/Trace_Properties/Secrecy/: Secrecy_of_Ticket.out  Secrecy_of_Ticket.pv
implementation/: Cargo.toml  Makefile  README.md  create_plot.py  result-purchase-crypto.csv  result-purchase.csv  result-refund-crypto.csv  result-refund.csv  result-transfer-crypto.csv  result-transfer.csv  result-validate.csv  result-validation-crypto.csv  result-validation-state.csv  results.json
implementation/indocrypt_protego-main/: Cargo.toml
implementation/indocrypt_protego-main/src/: protocol.rs
implementation/src/: audit.rs  encryption.rs  main.rs  randomize.rs  signature.rs
