[package]
name = "applause"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
elliptic-curve= { version = "^0.13", features = ["arithmetic"] }
curve25519-dalek = "^3.2"
ed25519-dalek = "2.0.0-pre.0"
hex-literal = "0.3.4"
rust-elgamal = "^0.4"
bls12_381 = "0.7.0"
ff = "0.12.0"
sha2 = "0.10.6"
serde = "1.0.162"
serde_json = "1.0.19"

[profile.release]
opt-level = 3

[features]
single = []
